Test updates (#59)
* tests: mark every benchmark for both profiles

* tests: assert reported span for out-of-scope constructs

* tests: fix unclosed javadoc comment

* tests: cover unary not, all int widths, loop break and plain calls